[package]
name = "wavefront"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screen-13 = "*"
inline-spirv = "0.1.5"
glam = "0.22"
crevice = {version = "0.12.0", features = ["glam"]}
bytemuck = {version = "1.12.3", features = ["derive"]}
