[package]
name = "wavefront"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screen-13 = { git = "https://github.com/DoeringChristian/screen-13.git", branch = "ray-query" }
pretty_env_logger = "0.4.0"
inline-spirv = "0.1.5"
glam = {version = "0.22", features = ["bytemuck"]}
macaw = "0.18.0"
crevice = {version = "0.12.0", features = ["glam"]}
bytemuck = {version = "1.12.3", features = ["derive"]}
russimp = {version = "2.0.1", features = ["prebuilt"]}
rust-shader-common = {path = "shaders/rust-shader-common"}

[build-dependencies]
#spirv-builder = {git = "https://github.com/DoeringChristian/rust-gpu.git", branch = "u_to_ptr"}
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }

[workspace]
members = [
"shaders/rust-shaders"
]
